[package]
name = "ingest"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tungstenite = "0.20"
tokio-tungstenite = "0.17"
futures = "0.3"
anyhow = "1.0"
# Add "json" feature so .json(...) is recognized
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
common = { path = "../common" }
