[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"
rand = "0.8" 

# (Optional) if you want to reuse TaxRecord from your `common` crate
# common = { path = "../common" }
